--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11684457.md#1" target="_blank">旅英港人再多城游行 促英政府捍卫香港自由</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11684457.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-41-150x120.jpg" align ="left"></a>11月23日，英国多个城市再次同步发起声援香港的集会游行活动，参与城市包括伦敦、伯明翰、曼城、布里斯托及爱丁堡等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 7:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11681609.md#1" target="_blank">机密文件外泄（一）揭新疆拘留营运作机制</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11681609.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1152108730-150x120.jpg" align ="left"></a>最近被曝光的中共高度机密的内部文件披露了新疆拘留营的运作机制，以及该地区奥威尔式的大规模监控和被称为“预见性警务” 监控和搜捕系统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 5:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682866.md#1" target="_blank">省公安厅操控 哈尔滨铁路警参与两起绑架大案</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682866.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15dacee60705919d_ttl7dayOEG_20170107151439_650-150x120.jpg" align ="left"></a>近年来，哈尔滨铁路公安局在其上属黑龙江省公安厅的指使下，积极参与迫害本省法轮功学员，其迫害人数之多在全国铁路公安系统内实属少见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 5:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683351.md#1" target="_blank">香港区选结果表明公众对政治改革的渴望</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683351.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1MJ7LE-150x120.jpg" align ="left"></a>香港24日区议会选举，泛民主派击败亲共的建制派取得历史性胜利，日媒在社评中指出，香港政府应该将这一结果视为是必须改变政治现状的迹象。林郑月娥也应让中共明白，若香港民意再次被忽视，动荡将会持续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 7:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683302.md#1" target="_blank">蓬佩奥：泄露文件证明中共迫害新疆维吾尔人</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1ML5AU-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥（Mike Pompeo）于周二（11月26日）表示，最近泄露的文件证实，中共正在对维吾尔族穆斯林和其他少数群体进行大规模拘留，这是严重的侵犯人权行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 6:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683257.md#1" target="_blank">欲阻律师接法轮功案 河北司法官威胁其父母</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683257.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/lutingge1-150x120.jpg" align ="left"></a>河北维权律师卢廷阁日前向大陆纪检监察部门发举报信，投诉石家庄司法局副局长为阻止其代理法轮功案，假借扶贫之名登临其父母家中骚扰和威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 6:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682704.md#1" target="_blank">【新闻看点】港区选翻车北京恼怒 林郑或悬了</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo5105193351925311607_2-150x120.jpg" align ="left"></a>香港民主派的胜利，犹如一场海啸，对建制派击溃如同摧枯拉朽。这样的结果，显然是出乎北京的预料。大选之后，有2点值得人们关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 4:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683073.md#1" target="_blank">香港区选 建制派惨败 中共怪美国遭炮轰</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11683073.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911242018192188-600x400-1-150x120.jpg" align ="left"></a>香港区议会选举民主派以压倒性席位击败亲共建制派，改变了区议会的政治版图，令中共恼怒。北京不承认民主派的胜利是香港民意的反映，反称选举不公，有外国势力干预，并将矛头指向美国，同时谴责美国干涉其内政。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 4:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682675.md#1" target="_blank">山东泰安政协前副主席谭业刚被判15年徒刑</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682675.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/tan-yegang_1-600x400-150x120.jpg" align ="left"></a>据10月30日山东消息，泰安市政协前副主席谭业刚，因受贿罪、贪污罪，被判处有期徒刑15年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 4:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677229.md#1" target="_blank">冤狱10年 陕西优秀教师佘程邦含冤离世</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11-17-600x400-150x120.jpg" align ="left"></a>陕西省安康市汉阴县优秀高中教师、法轮功学员佘程邦，被劳教迫害3年、非法判刑7年，于2019年3月份在迫害中离世，时年53岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682607.md#1" target="_blank">何君尧落败 餐厅推“何已完饭”现排队长龙</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/26/n11682607.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-26_17-34-26@1200x1200-150x120.jpg" align ="left"></a>亲共立法会议员何君尧24日区议会选举落败，26日有餐厅为了庆祝何君尧落选，推出特别餐点“ 何已完饭”，吸引很多香港民众前去，餐厅外现排队人龙。（余天佑／大纪元）......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:13 AM							</td></tr>
@@ -19,16 +27,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11679948.md#1" target="_blank">22个人权组织致信联合国 呼吁谴责港府</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11679948.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1906100646431528-150x120.jpg" align ="left"></a>11月25日，22个人权组织今天向联合国人权高级专员米歇尔·巴切莱特（Michelle Bachelet）发出公开信，要求联合国必须谴责香港政府和港警，因为港府系统性地侵犯人民和平集会自由和言论自由权利，而警方对抗议者使用了不必要和过度的武力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677694.md#1" target="_blank">泛民一举夺388席 香港政坛的一股新力量</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/EKKN9vhU4AAdiem-150x120.jpeg" align ="left"></a>在反送中抗议大潮之下，11月24日早，香港区议会选举拉开战幕，各区票站投票从上午7时30分至晚上10时30分，经过全日15小时投票，投票率首度破七成，达71.2%，投票人数达294万。民主派在今届选举中大获全胜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 9:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11679350.md#1" target="_blank">当选区议员 岑子杰要求解封理大释放所有人</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11679350.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907291237391366-150x120.jpg" align ="left"></a>岑子杰胜出后接受访问时表示，呼吁其他民主派当选人及高票落选者一同联署，要求警方尽快解封理大，释放所有被捕人，并停止对被捕人作政治检控。他指这是政府应马上做的第一个让步。网友立刻对此留言说，“真正的民选议员，不负民望！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 6:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678115.md#1" target="_blank">【拍案惊奇】民主派大胜 全面解读香港区选</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678115.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191125366-150x120.jpg" align ="left"></a>11月24日，香港区议会选举，全世界都在关注。民主派抗争人士在选举前，就喊出“踢走建制派”，“血债票还”等口号，现在已经可以说基本达到目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 1:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677463.md#1" target="_blank">9年冤狱折磨 法轮功学员徐天福被迫害离世</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2015-11-24-minghui-jilin-female_torture-17-1-508x359-1-150x120.jpg" align ="left"></a>四川米易县撒莲乡法轮功学员徐天福，因修炼法轮功曾被非法判刑9年，自2012年10月从德阳监狱回家后，因在监狱被迫害，身体受损严重，一直没有恢复，于2018年黄历冬月三十离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677987.md#1" target="_blank">泛民大胜 港区“全民公投”清除中共代理人</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/new_photo6258123455056685372-150x120.jpg" align ="left"></a>香港区议会选举11月24日结束，共计294万人投票，总投票率突破七成，达71.2%。累积投票人数及投票率均打破历届区议会选举纪录，投票率亦打破历届立法会选举纪录。这次选举是持续5个多月反暴政、争自由运动以来首次民意直接表达。香港市民心目中的投票意义重大，这次区议会选举成为清除中共代理人的全民公投。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677157.md#1" target="_blank">香港区议会选举计票开始 投票率创纪录</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677157.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911232121172188-150x120.jpg" align ="left"></a>周日（11月24日），全球备受瞩目的香港区议会选举拉开帷幕。与前几届投票不同，有媒体形容本次投票人潮如海啸，投票人数创纪录。在香港经历了近6个月的民主抗议活动后，这个超纪录投票意味着什么？地区政治版图能否被改变，成为关注焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677100.md#1" target="_blank">法轮功学员陈玉花被山东女子监狱迫害致死</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2007-7-27-sd-02-150x120.jpg" align ="left"></a>019年，山东省菏泽市法轮功学员陈玉花被非法判刑4年，并在山东省女子监狱被迫害致死，9月25日遗体被火化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 12:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11671570.md#1" target="_blank">中共迫害法轮功学员案例 强行拆散家庭</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11671570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11-13-150x120.jpg" align ="left"></a>有这样一群人因为坚守自己的良知和对法轮功“真、善、忍”的信仰，被中共无情地摧毁了赖以生存的家，从而失去了亲人，失去了人生存的基本条件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 8:50 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677105.md#1" target="_blank">共谍涉台选举？ 郭台铭：国安问题应查到底</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677105.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c7cd0fd38f98e008005bb9ca67e9a2f5-150x120.jpg" align ="left"></a>对于中国间谍王立强向澳洲投诚并宣称中共企图介入台湾2020大选，鸿海集团创办人郭台铭24日说，共谍案是国安问题，牵涉到国安和法律层面，政府应查到底，因为共谍案相关指控确实是影响台湾选民重要选择的指标。国民党则呼吁司法单位，尽速查明事实，勿让不实谣言与假新闻影响大选。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 7:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11683545.md#1" target="_blank">香港二千校友联署促解封理大</a><br></h3>理工大学管理层昨日到校园，劝谕留守者离开。林郑月娥表示如果理大校方可劝谕留守者离开，警方的安全小组便不会进入校园，理大学生会署理会长胡国泓批评林郑将责任推给学校。另外，超过2千名理大校友联署，要求校方及警方尽快解封和重整校园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 9:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11680303.md#1" target="_blank">纳瓦罗：白宫在审议香港人权法案 再送川普</a><br></h3>上周，《香港人权与民主法案》顺利通过美国国会两院。美国贸易顾问彼得·纳瓦罗（Peter Navarro）表示，目前，白宫律师正在审查国会上周批准的香港法案，之后将提交总统川普（特朗普）进行签署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677619.md#1" target="_blank">旅英港人多城游行 吁英政府支持港民抗争</a><br></h3>中央社11月23日报导，英国民间团体“争取自由.与香港站在一起”（Fight for Freedom. Stand with Hong Kong）和“民主香港”（Democracy for Hong Kong - D4HK）发起了在伦敦的游行，而其它团体则领导了伯明翰、曼彻斯特、纽卡斯尔（纽卡索）、爱丁堡和布里斯托尔的游行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677073.md#1" target="_blank">中共间谍渗透台湾 蔡英文：严查严办</a><br></h3>中共间谍王立强向澳洲投诚，并向当地媒体披露，中共在去年台湾九合一选举时，砸下钜额资金干预台湾的选战。总统蔡英文24日表示，台湾政府对此严查严办，国安单位已掌握相关事证；
-国安局则表示，将持续与国际友方合作进行查证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 1:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/ncid278_4.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/ncid278_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_4.htm">http://www.epochtimes.com/gb/ncid278_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
