--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11698908.md#1" target="_blank">浙江一印染厂污水罐倒塌 致9死4重伤</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11698908.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262085163-150x120.jpg" align ="left"></a>昨日（3日）17时19分许，浙江海宁市许村镇龙洲印染有限公司污水罐爆炸，导致货架倒塌，截止4日凌晨，共救出22人，其中7人死亡。据悉该涉事印染公司曾多次遭到行政处罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697592.md#1" target="_blank">六四天网义工邢鉴恐遭遣返 立绝命书抗争</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sbOk_oGY-150x120.jpg" align ="left"></a>滞留泰国已获得联合国难民身份的六四天网义工邢鉴，于近日从曼谷移民拘留中心传出绝命书，表示如果中共强制遣返，他将以死明志。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697470.md#1" target="_blank">向心共谍案 专家吁政府严查揪出在台间谍网</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191127PHO0018l-600x400-150x120.jpg" align ="left"></a>中共特工王立强投诚澳洲并申请庇护引发国际关注，对于他指控的老板中共间谍向心与龚青夫妇在台被抓，专家支持中华民国政府严审向心夫妇，并揪出渗透潜藏在台湾的共谍网，尽速绳之以法维护国安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698134.md#1" target="_blank">曾目睹高以翔骤逝 黄景瑜沉寂多日后憔悴现身</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>曾目睹台湾艺人高以翔骤逝过程的大陆男星黄景瑜，12月2日在品牌活动上憔悴现身。沉寂多天后复工的他，脸色凝重，声音沙哑，整个人暴瘦了一圈，让不少粉丝心疼他对好友的离世不知有多自责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698440.md#1" target="_blank">迪丽热巴与古力娜扎被叫混 大陆名主持遭炮轰</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698440.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/VCG11490128167_meitu_1-1-150x120.jpg" align ="left"></a>来自新疆的大陆女星迪丽热巴与古力娜扎，3日晚一同在上海出席某时尚盛典时，被知名主持人朱丹叫混。当晚口误不断的朱丹，一下将古力娜扎叫成迪丽热巴，之后又将林允喊成林允儿，令各家粉丝看了大为光火，引发网络热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698523.md#1" target="_blank">香港女孩的抗议经历：从街头到“键盘战线”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698523.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1167368887-150x120.jpg" align ="left"></a>年轻的香港年轻人高喊着可能是自己的遗言，走向抗议活动，这样的视频几乎挤爆了邝颂晴的邮箱。五年前，18岁的她曾是香港“雨伞运动”的一员，如今她是在汉堡大学修读欧洲研究及欧洲法学的硕士生，她的抗议活动从香港街头转移到了键盘上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698583.md#1" target="_blank">报复香港反送中？传中共拟阻陆片竞逐金像奖</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1907140504501366@1200x1200-150x120.jpg" align ="left"></a>中共官方继今年8月祭出金马禁令之后，近日又有消息指，因对香港近半年来的反送中抗争运动十分不满，中共当局正部署打压明年4月举行的香港金像奖，试图禁止大陆电影和电影人参加颁奖礼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698476.md#1" target="_blank">高管全部辞职  暴风集团面临多项风险</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/one_20191203081726482-1-150x120.jpg" align ="left"></a>暴风集团的实际控制人7月份被抓之后，集团高管已经全部辞职，目前该集团主要业务无法运作、拖欠员工薪水，并且面临净资产为负、被暂停上市、无法偿债等多项风险。该集团股价持续暴跌，涉及股东7万户。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698557.md#1" target="_blank">德国民众在线请愿 促国会通过《人权问责法》</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-849439738-150x120.jpg" align ="left"></a>欧盟呼吁成员国遵守《全球马格尼茨基人权问责法》并制定类似法律，旨在严惩实施酷刑、洗脑或强迫劳动等严重侵犯人权行为的罪犯。德国民众也发起了网上请愿活动，敦促国会通过此法。从现在起到12月30日，人人都可以参加在线请愿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698502.md#1" target="_blank">广州地陷埋3人 当局不救人填水泥 家属抗议</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698502.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111261803942-150x120.jpg" align ="left"></a>12月1日，广州市区发生地面塌陷，3人被埋，起初仍能看到人的头部。然而家人等来的不是救援，而是当局直接往坑中填水泥，借口是避免塌陷区域扩大。受害人的家属连日举横幅抗议当局草菅人命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank">“豫章书院事件”持续 成都与北京再曝虐童案</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-4-150x120.jpg" align ="left"></a>江西南昌虐打体罚学生事件在两年前曝光之后，该事件还未得到彻底解决，志愿者与爆料人纷纷受到威胁之际，近日，北京明声听力康复中心与四川成都嘉年华青少年心理辅导中心也被爆虐童。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698655.md#1" target="_blank">彭斯透露川普在贸易谈判中使用的两个杠杆</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698655.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/000_1H321V-150x120.jpg" align ="left"></a>美国副总统迈克·彭斯（Mike Pence）周二（12月3日）表示，随着美国总统川普（特朗普）继续推动与中方，以及法国和其它欧洲盟国的贸易协议，美国市场准入（或强劲经济）和关税手段是川普的两个杠杆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698355.md#1" target="_blank">美国学者：中共新疆模式源自于迫害法轮功</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698355.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-sarah-cook-150x120.jpg" align ="left"></a>“国际调查记者同盟”（ICIJ）日前披露的新疆再教育营机密文件成为国际社会关注的焦点。华府学者稍早表示，中共在新疆施行的迫害方式，比如“再教育集中营”、“转化”等，很多来自中共对法轮功的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698275.md#1" target="_blank">栗战书标榜澳门基本法23条 隐藏对港密码？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020145571501-150x120.jpg" align ="left"></a>中共人大常委会今天（3日）在北京召开澳门《基本法》实施20周年座谈会，规格超高。中共人大委员长栗战书讲话强调中央对澳门和香港的要求一样。分析认为，港澳之间无可比性；香港动荡局势下，中共暗示或以新手段对待香港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698212.md#1" target="_blank">专利权专家：没证据证明华为领先5G技术</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1905030710452378-150x120.jpg" align ="left"></a>华为一向标榜其5G技术领先世界。德国媒体引述专家的话指出，领先5G技术的欧洲，而不是华为。说华为领先，那是该公司和中共宣传的结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:53 AM							</td></tr>
@@ -19,23 +31,5 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687375.md#1" target="_blank">民企生存环境恶劣 浙商四次被掠夺财产（二）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/S__13778976-1-150x120.jpg" align ="left"></a>浙江商人姜向前经营的南京瑞雪淀粉糖设备制造公司，历经客户拖欠货款，并且勾结公、检、法，谋划编制各种罪名实施诬告陷害，进而4次被掠夺财产。短短几年便被逼得破产倒闭。他感叹大陆民企生存环境恶劣，基层司法系统中周永康型“流毒”依然肆虐！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697897.md#1" target="_blank">加前副总理提与中共交换人质 专家称很危险</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697897.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05082396-150x120.jpg" align ="left"></a>加拿大前自由党副总理、研科现任董事曼利（John Manley）近日表示，加拿大政府应与中共交换囚犯，才能让被中共关押的两名加拿大公民回国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698239.md#1" target="_blank">美国务院高官批中共：内政外交都倒行逆施</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698239.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1156013639-150x120.jpg" align ="left"></a>12月2日，美国务院负责东亚和太平洋事务的助理国务卿史达伟（David Stilwell）发表演说，批评中共在过去的20年里，在内政和外交领域的倒行逆施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697873.md#1" target="_blank">港人身份变敏感？交银香港首席经济师被炒</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/140626080016100615-600x400-150x120.jpg" align ="left"></a>前中国（共）交通银行香港分部的首席经济学家罗家聪（Law Ka-Chung）近日向英媒透露，今年10月他无故被迫辞掉分行首席经济学家的职务，他指称该行这样做是因为他是香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698041.md#1" target="_blank">“自由之家”力挺港人 斥中共可耻</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-961899996-150x120.jpg" align ="left"></a>作为对中共“制裁”报复的回应，总部位于美国华盛顿的“自由之家”于周二（12月3日）发表声明指出，在过去几十年里，该组织致力维护全球各地民主与人权。为了履行这项使命，“自由之家”与争取自由的香港人民站在一起，呼吁北京遵守中英联合声明。“自由之家”依法做事，不需要得到中共的许可。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698082.md#1" target="_blank">更严制裁 传白宫拟将华为剔出美银行体系</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/060fab95ddbb0c11d145f09138cad61e-150x120.jpg" align ="left"></a>路透社周二（12月3日）援引三位消息人士的话称，美国今年稍早曾计划将中国电讯公司华为从美国银行体系中剔除，将其列入美国财政部的“指定制裁名单”（Specially Designated Nationals List, SDN）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698032.md#1" target="_blank">中疾控报告：内蒙肺鼠疫患者疑似感染源</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-87219901-150x120.jpg" align ="left"></a>中国疾病预防控制中心（中疾控）披露，来自内蒙古的两例肺鼠疫夫妻患者，丈夫很可能在自家农场挖土时吸入带有鼠疫菌的气溶胶感染，妻子与丈夫接触而感染。另一名腺鼠疫患者给死野兔剥皮后被感染。前两例患者和第三例患者之间无流行病学关联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697875.md#1" target="_blank">英议员促抹去香港警察协会王室相关头衔</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010520401501-150x120.jpg" align ="left"></a>香港警方过多使用武力的情况引起国际关注。英国多名国会议员及政界人物日前致信英国女王，要求抹去位于伦敦的“王家香港警察协会”的“王家”头衔及王冠徽章。信中批评香港警察配合政府打压异见，无差别使用武力镇压香港民主运动，而协会也站在警队一边，因此已不配使用王冠标志。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank">中共拒美舰停港 专家：或助台美军事交流</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/413f33f09a1dbc76a995c905336bf096-150x120.jpg" align ="left"></a>中共外交部表示，将拒绝美国舰船和军机停靠香港的申请。有美国的军事专家分析，中共这么做，将会使得台湾与美国间的军事关系提升，美国将寻找更加可靠的补给港口，而台湾会是一个备受支持的选项。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697688.md#1" target="_blank">美大学生控告抖音海外版侵犯个资</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1BM18F-150x120.jpg" align ="left"></a>一名来自加利福尼亚州的大学生起诉社交媒体“字节跳动”（ByteDance Inc.）抖音海外版——TikTok。原因是该公司在使用她的视频创建针对性广告在线个人资料时，将自己的个人信息秘密转移到了中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697901.md#1" target="_blank">北约把目标从苏联转为中共 秘书长释因由</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186259372-150x120.jpg" align ="left"></a>周二（12月3日），北约国家元首和政府首脑在英国举行为期两天的北约峰会，这是首次把中共威胁列入了北约议题，各国将会讨论” 中共军事和安全“等方面议题，美国总统川普（特朗普）也在会上谈论“中共威胁”。北约为何把对付的目标转向了中共？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697547.md#1" target="_blank">台退役中校涉中共间谍 检调求刑3年8个月</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191203000200M-150x120.jpg" align ="left"></a>台南地检署侦办共谍案，查出台湾工党主席郑昭明，涉嫌引介儿子、前军备局退休中校郑智文为中共发展组织，并赠予礼金、旅游补贴及手表给陈姓中校，意图吸收提供台湾军情，要求日后中共若武力犯台，以“北平模式”不抵抗策略处理，检调依《国安法》起诉郑姓父子，并求处郑昭明3年，郑智文3年8个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697712.md#1" target="_blank">川普：美中协议无最后期限 更愿大选后签单</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697712.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月3日）在伦敦示意记者，与中方的贸易协议谈判没有最后期限，他宁可等到美国大选后再签协议。这番评论令外界对华盛顿和北京在几周内能够达成第一阶段协议的可能性产生怀疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696610.md#1" target="_blank">【翻墙必看】林郑为何让习近平震惊？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010333492188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.【独家】习近平震惊 林郑严重误判选情
-据接近中南海高层消息人士透露，香港区议会选举结果出炉，习近平感到震惊，建制派的几乎全军覆没，与特首林郑选前报告的“一定会赢”落差太大，中央一时拿不出政策，既定政策失算。
-
-2.贸易战下中国粮食危机 学者：恐爆政治动荡
-美中贸易战持续，中国可能出现比经济下行更棘手的粮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695972.md#1" target="_blank">送辩护词遭枉判3年 辽宁孔繁校冤狱期满回家</a><br></h3>辽宁省抚顺市法轮功学员孔繁校，仅仅因给立案单位送辩护词就被非法判刑3年，羁押到辽宁省本溪监狱服刑，11月17日，3年冤狱期满才回到家中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
